# cross-platform-samples

atom-pack-example/: package.json
atom-pack-example/keymaps/: smpl-txt-editor.json
atom-pack-example/lib/: smpl-txt-editor.coffee
atom-pack-example/menus/: smpl-txt-editor.json
dependencies-managers/: .gitignore  build.sh  readme.md
dependencies-managers/simple-project/: CMakeLists.txt  Makefile
dependencies-managers/simple-project/application/: CMakeLists.txt  Makefile  main.cpp
electron-example/: dialog.html  index.html  index.js  package.json  renderer.js
hough-circles/: .gitignore  CMakeLists.txt  convertions.cpp  convertions.h  hough-circles.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker-thread.cpp  worker-thread.h
qml-example/: CMakeLists.txt  clocks.qml  clocks.qmlc  clocks.qrc  main.cpp  qml-example.pro  time-trigger.cpp  time-trigger.h
rss-client-master/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rss-client.pro
tcp-server-example/: CMakeLists.txt
tcp-server-example/client/: CMakeLists.txt  client.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
tcp-server-example/server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.pro
xml-editor/: .gitignore  CMakeLists.txt  main.cpp
xml-editor/gui/: window.cpp  window.h  window.ui
xml-editor/translations/: lang_en_US.ts  lang_ru_RU.ts
xml-editor/translations-good/: lang_en_US.ts  lang_ru_RU.ts
